kubernetes-books/k8s-book/04-istio/03-traffic-management/mainfest/bookinfo-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"Gateway","metadata":{"annotations":{},"name":"bookinfo-gateway","namespace":"default"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["*"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}
  creationTimestamp: "2022-12-19T01:48:41Z"
  generation: 1
  name: bookinfo-gateway
  namespace: default
  resourceVersion: "16285126"
  uid: 210b3928-0a5f-4fd9-8277-b5c73498db52
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
